# workflow_agent

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
planning_generate_api/: INTENT_DETECTION_README.md  app.py  intent_detection.py  llm.py  prompt.py  readme.md  response_formatter.py  test_api.py  test_intent.py  utils.py  workflow_schema.py
planning_generate_api/data/: input_meta.json  output.json  retrive_data.json
planning_generate_api_v002/: README_auto_param_filler.md  README_dify_async.md  app.py  auto_param_filler.py  base_call_dify_workflow.py  call_dify.py  example.py  intent_detection.py  llm.py  llm_dify.py  main.py  neo4j_search_node.py  plann_schema.py  prompt.py  quick_test.py  test_auto_filled_params.py  test_auto_param_filler.py  test_dify_async.py  test_fixed_api.py  test_metainfo.py  utils.py
planning_generate_api_v002/data/: 1.json  2.json  output1.py  prompt.md  request_dify.md
planning_generate_api_v002/data_process/: data_p.py  example.py
planning_generate_api_v002/find_first_node/: utils.py
planning_generate_api_v002/find_first_node copy/: utils.py
v003/: README.md  app.py  call_dify.py  requirements.txt  utils.py
v003/data/: Stereo_Miner_Autoannotation_workflow.txt  Stereo_Miner_Clustering_workflow.txt  Stereo_Miner_Enrichment.json  Stereo_Miner_Interaction.txt  Stereo_Miner_Preprocessing_workflow.txt  Stereo_Miner_Pseudotime.txt  qc.txt
